--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ header div {
   font-size: 40px;
   font-weight: 300;
   color:rgb(248, 183, 63) ;
+  margin-left:2%;
 }
 .nav {
   text-align: center;
